update GoalService